<resources>
    <string name="app_name">Moving</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="login2">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="login_id">ID</string>
    <string name="login_pw">PASSWORD</string>
    <string name="register">회원가입</string>
    <string name="register_id">아이디를 입력해주세요.</string>
    <string name="register_pw">비밀번호를 입력해주세요.</string>
    <string name="register_pw2">비밀번호 확인</string>
    <string name="login_id_save">아이디 저장하기</string>
    <string name="monthly_discount">이달의 할인</string>
    <string name="movie_review">영화 리뷰</string>
    <string name="movie_chart">영화 차트</string>
    <string name="cinema_list">영화관 목록</string>
    <string name="register_nickname">닉네임을 입력해주세요</string>
    <string name="tel">통신사를 선택해주세요</string>
    <string name="setting">설정</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_movie">영화차트</string>
    <string name="ticket">예매율</string>
    <string name="SKT">SKT</string>
    <string name="LG">LG U+</string>
    <string name="KT">KT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>