<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_monthly_discount"
            android:title="@string/monthly_discount" />
        <item
            android:id="@+id/nav_movie_review"
            android:title="@string/movie_review" />
        <item
            android:id="@+id/nav_movie_chart"
            android:title="@string/movie_chart" />
        <item
            android:id="@+id/nav_cinema_list"
            android:title="@string/cinema_list" />
        <item
            android:id="@+id/nav_setting"
            android:title="@string/setting" />
    </group>


</menu>